manifests/seraphim/prod/seerr/Namespace-seerr.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: seerr
