manifests/seraphim/prod/seerr/Deployment-seerr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: seerr
    app.kubernetes.io/name: seerr
    app.kubernetes.io/part-of: seerr
    app.kubernetes.io/version: 2.7.3
  name: seerr
  namespace: seerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: seerr
      app.kubernetes.io/name: seerr
  template:
    metadata:
      labels:
        app.kubernetes.io/component: main
        app.kubernetes.io/instance: seerr
        app.kubernetes.io/name: seerr
        app.kubernetes.io/part-of: seerr
        app.kubernetes.io/version: 2.7.3
    spec:
      containers:
        - env: []
          image: fallenbagel/jellyseerr:2.7.3
          name: seerr
          ports:
            - containerPort: 5055
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /app/config
              name: config
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsUser: 1000
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
