manifests/seraphim/prod/seerr/Service-seerr.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: seerr
    app.kubernetes.io/name: seerr
    app.kubernetes.io/part-of: seerr
    app.kubernetes.io/version: 2.7.3
  name: seerr
  namespace: seerr
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: seerr
