manifests/seraphim/prod/seerr/HTTPRoute-seerr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "10"
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: seerr
    app.kubernetes.io/name: seerr
    app.kubernetes.io/part-of: seerr
    app.kubernetes.io/version: 2.7.3
  name: seerr
  namespace: seerr
spec:
  hostnames:
    - seerr.vegapunk.cloud
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: seerr
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
